force-app/main/default/objects/Asset__x/Asset__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>Asset</externalName>
    <label>Asset</label>
    <pluralLabel>Assets</pluralLabel>
</CustomObject>