force-app/main/default/objects/Asset__x/fields/Amount_Financed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Financed__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Amount Financed</description>
    <externalDeveloperName>AmountFinanced</externalDeveloperName>
    <label>Amount Financed ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>