force-app/main/default/objects/Asset__x/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Id</description>
    <externalDeveloperName>AssetId</externalDeveloperName>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>